[package]
name = "r1"
version = "0.1.0"
edition = "2021"


[dependencies]
ft_homomorphic = {git = "ssh://git@code.non-convex.com/lihaohan/ft_homomorphic.git"}
yasuo_utils = {git = "ssh://git@code.non-convex.com/lihaohan/yasuo_utils.git"}
num-bigint = "0.4"
hex = "0.4"
jsonwebtoken = "8.3"
anyhow = "1.0"
openssl = { version = "0.10", features = ["vendored"] }